@@ -18,10 +18,10 @@ jobs:
         os:
           - name: freebsd
             version: '13.3'
-            pkginstall: pkg install -y p5-ExtUtils-MakeMaker p5-JSON-MaybeXS p5-Test-Most p5-Test-Needs p5-XML-Parser
+            pkginstall: pkg install -y p5-ExtUtils-MakeMaker p5-JSON-MaybeXS p5-Test-Most p5-Test-Needs
           - name: openbsd
             version: '7.5'
-            pkginstall: pkg_add libxml libiconv p5-List-MoreUtils p5-Log-Any p5-JSON-MaybeXS p5-XML-Parser
+            pkginstall: pkg_add libxml libiconv p5-List-MoreUtils p5-Log-Any p5-JSON-MaybeXS
     steps:
       - uses: actions/checkout@main
         with:
@@ -35,7 +35,7 @@ jobs:
           run: |
             sudo hostname example.com
             sudo ${{ matrix.os.pkginstall }}
-            sudo cpan -i XML::LibXML XML::PP
+            sudo cpan -i XML::PP
             curl -L https://cpanmin.us | sudo perl - --notest --installdeps --with-configure --with-develop .
             sudo chown -R runner:runner .
             AUTOMATED_TESTING=1 perl Makefile.PL
