@@ -20,7 +20,6 @@ my $config = Config::Abstraction->new(
 );
 
 ok(defined($config));
-diag(Data::Dumper->new([$config])->Dump());
 diag(Data::Dumper->new([$config])->Dump()) if($ENV{'TEST_VERBOSE'});
 cmp_ok(@{$config->get('files')}[0], 'eq', '/etc/group', 'testing');
 
