@@ -2,6 +2,7 @@ Revision history for Config::Abstraction - Configuration Abstraction Layer
 
 0.15
 	Makefile.PL: Prefer XML::PP, since XML::Simple can have loading problems on Windows
+	Improved the fallback to Config::Auto when XML::Simple isn't working
 
 0.14	Mon Apr 28 11:17:20 EDT 2025
 	Allow logger to be an array ref
